fixed spacing in Card

--- a/src/components/ui/cards/CardInfo.module.scss
+++ b/src/components/ui/cards/CardInfo.module.scss
@@ -15,6 +15,7 @@
 	width: 100%;
 	display: flex;
 	flex-direction: column;
+	justify-content: space-between;
 	gap: 0.5rem;
 }
 
@@ -27,8 +28,10 @@
 .cardContent {
 	&:hover {
 		.hovered {
+			display: flex;
+			flex-direction: column;
 			position: relative;
-			height: 6rem;
+			height: 7rem;
 			transform: scaleY(1);
 			padding: 0 0 0.75rem;
 			transform-origin: top;
